# haskarium

./: .gitlab-ci.yml  .stylish-haskell.yaml  .travis.yml  HLint.hs  haskarium.cabal  stack.yaml
doc/: 01.tools.md  05.books.md  07.type-alias.md  08.list-comprehension.md  10.data-product.md  11.data-sum.md  12.lambda-calculus.md  13.function-operations.md  14.data-sum-polymorphism-recursion-list.md  15.map-filter-comprehension.md  16.monkey-zip-fold.md  17.modules.lhs  18.laziness.md  19.class.lhs  2.project.md  20.semigroup.monoid.lhs  21.Tree.hs  22.Functor.hs  23.Applicative.hs  24.Function.hs  25.State.hs  26.hs  3.helloworld.md  4.stack.md  6.types-basic.md  7.type-alias.md  8.dollar-operator.md  9.data-product.md
exe/: Main.hs
exe/Haskarium/: Const.hs  Draw.hs  Generate.hs  Motion.hs  Types.hs  Util.hs
