name: haskarium
version: 0.1

cabal-version: >= 1.2
build-type: Simple

executable haskarium-view
    hs-source-dirs: exe
    main-is: Main.hs
    other-modules:  Haskarium.Const
                    Haskarium.Draw
                    Haskarium.Generate
                    Haskarium.Motion
                    Haskarium.Types
                    Haskarium.Util
    build-depends:  base
                  , gloss
                  , mtl
                  , optparse-applicative
                  , random
